Added mock data for API.

--- a/src/index.html
+++ b/src/index.html
@@ -10,12 +10,26 @@
 
 <head>
   <meta charset=UTF-8>
+  <script src="https://cdn.polyfill.io/v2/polyfill.js?features=fetch"></script>
 </head>
 
 <body>
   <h1>Wecome to JavaScript</h1>
+  <h2>Users</h2>
+  <table>
+    <thead>
+      <th>&nbsp;Command</th>
+      <th>&nbsp;Id</th>
+      <th>&nbsp;First Name</th>
+      <th>&nbsp;Last Name</th>
+      <th>&nbsp;Email</th>
+    </thead>
+    <tbody id="users"></tbody>
+  </table>
+
   <script src="bundle.js"></script>
-  <p>JSON API Call by: Ken Brunet</p>
+  <p> JSON Schema https://json.schema.org </p>
+  <p> API Call by: Ken Brunet </p>
   <p>Build: 1.0.25</p>
 </body>
 
